welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: '(' expected but '{' found.
 else if {
         ^Program:12: error: illegal start of simple expression
 	}
        ^